	  sometimes when trying to remove a group of users (Tim Ringenbach)
	* Clearing an AIM buddy icon actually removes it from the server,
	  icons changes in the account editor do not take effect if the
	  cancel button is used (Stu Tomlinson)
	* Improved chat parting logic (Tim Ringenbach)
	* Yet Another IRC channel user duplication bugfix (Tim Ringenbach)
	* TCL Plugin API changed
	* The mobile icon on MSN users is now removed when the person disables
	  mobile paging (Stu Tomlinson)
	* Conversation placement by account now works correctly with both
	  chats and IMs, and takes the Combine Chats and IMs option into
	  consideration.
	* Minor tweaks to the list box in the multi-field request dialogs
	  so they work without a label and scrollbar (Pekka Riikonen)
	* The Disconnect dialog no longer raises and gains focus each time
	  a disconnected account is added (Ka-Hing Cheung)
	* Added new MSN error codes and fixed an incorrect one (Stu Tomlinson)
	* Gadu-Gadu might actually connect again (Ignacy Gawedzki)
	* Buddy pounces for an account are removed when the account is
	  deleted (Gary Kramlich)
	* Various bug and memory leak fixes (Gary Kramlich)
	* Assorted SSL crashfixes

	Translations:
	* Catalan translation updated (Xan (DXpublica))
	* Chinese (Simplified) translation updated (Funda Wang)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Dutch translation updated (Vincent van Adrighem)
	* English (British) translation updated (Luke Ross (lukeross))
	* Hebrew translation had 1 character removed (Ambrose C. LI)
	* Russian translation updated (Alexandre Prokoudine)
	* Spanish translation updated (Javier Fernandez-Sanguino Pena and
	  Francisco Javier F. Serrador)

version 0.75 (01/09/2004):
	* New Yahoo! auth method
	* Yahoo! file transfer (Tim Ringenbach)
	* Yahoo! chat joining fixes (Tim Ringenbach)
	* Persons can auto-expand when hovering your mouse over it
	* Improved i18n support for MSN email notification (Felipe Contreras)